# AutodeskCodingAssignment

./: README.md
Refactoring/: Refactoring.py  Refactoring.txt  SConstruct  VERSION
StringReversal/: README.md  String-reversal.txt
StringReversal/ReverseWordsInString/: CMakeLists.txt  ReverseWordsInString.cpp  main.cpp
StringReversal/ReverseWordsInStringTesting/: .editorconfig  ReverseWordsInString.cpp  ReverseWordsInString.h  test.cpp
