# CMakeList.txt : CMake project for ReverseWordsInString, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("ReverseWordsInString")

# Add source to this project's executable.
add_executable (ReverseWordsInString "ReverseWordsInString.cpp"  "main.cpp" "ReverseWordsInString.h"  )

# TODO: Add tests and install targets if needed.
